<resources>
    <string name="app_name">Restaurant App</string>
    <string name="action_settings">Settings</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="reset_password">Reset password</string>
    <string name="info_enter_email_password">Please enter email and password</string>
    <string name="log_out">Log out</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="enter_email_password">Enter email and password</string>
    <string name="enter_email">Enter email</string>
    <string name="restaurant_data">Restaurant data</string>
    <string name="workers">Workers</string>
    <string name="dishes">Dishes</string>
    <string name="orders">Orders</string>
    <string name="ingredients">Ingredients</string>
    <string name="discounts">Discounts</string>
    <string name="temp">Temporary string</string>
    <string name="my_data">My data</string>
    <string name="save">Save</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="your_data_has_been_changed">Your data has been changed</string>
    <string name="passwords_differ">Entered passwords differ</string>
    <string name="password_changed">Your password has been changed</string>
    <string name="auth_failed_try_again">Authentication failed. Try again</string>
    <string name="title_activity_settings2" translatable="false">SettingsActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_description">Restaurant description</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="is_required">%1$s is required</string>
    <string name="restaurant_data_modified">Restaurant data changed successfully</string>
    <string name="enter_correct_hours">Enter correct hours in format HH:MM or H:MM</string>
    <string name="default_opening_hours">Default opening hours</string>
    <string name="default_">Default</string>
    <string name="opening_hours">Opening hours</string>
    <string name="about_restaurant">About restaurant</string>
    <string name="location">Location</string>
    <string name="delivery">Delivery</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="street">Street</string>
    <string name="house_number">House number</string>
    <string name="flat_number">Flat number</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="manager">Manager</string>
    <string name="worker">Worker</string>
    <string name="disable_user">Disable user</string>
    <string name="edit_worker">Edit worker</string>
    <string name="worker_modified">Worker has been modified</string>
    <string name="enter_password">Enter password to save changes</string>
    <string name="user_password">User password</string>
    <string name="repeat_user_password">Repeat user password</string>
    <string name="created_new_user">You have created a new user. You\'re now logged in as the new user</string>
    <string name="no_permission_user_data">You don\'t have permission to browse or modify this user\'s data</string>
    <string name="account_has_been_disabled">This account has been disabled</string>
    <string name="temp_first_name">Temporary first name</string>
    <string name="temp_last_name">Temporary last  name</string>
    <string name="no_user_data_found">No user data found. Default user data has been set. You can always change it in Settings</string>
    <string name="enable_user">Enable user</string>
    <string name="you_can_set_lower_roles">You can only set roles which are lower than yours</string>
    <string name="to_manage_go_to_settings">To manage your account, go to Settings</string>
    <string name="add_discount">Add discount</string>
    <string name="zero" translatable="false">0</string>
    <string name="code">Code</string>
    <string name="discount_added">Discount has been added</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="ingredient_added">Ingredient has been added</string>
    <string name="gram" translatable="false">g</string>
    <string name="milliliter" translatable="false">ml</string>
    <string name="piece">pcs</string>
    <string name="add_dish">Add dish</string>
    <string name="price">Price</string>
    <string name="add_worker">Add worker</string>
    <string name="add_new_position">Add new position</string>
    <string name="number_of_available_discounts">Number of available discounts</string>
    <string name="number_of_assigned_discounts">Number of assigned discounts</string>
    <string name="number_of_used_discounts">Number of used discounts</string>
    <string name="no_permission">No permission</string>
    <string name="edit_discount">Edit discount</string>
    <string name="edit_ingredient">Edit ingredient</string>
    <string name="edit_dish">Edit dish</string>
    <string name="dish_added">Dish has been added to menu</string>
    <string name="discount_modified">Discount has been modified</string>
    <string name="ingredient_modified">Ingredient has been modified</string>
    <string name="dish_modified">Dish has been modified</string>
    <string name="remove_item">Remove item</string>
    <string name="discount_removed">Discount has been removed</string>
    <string name="ingredient_removed">Ingredient has been removed</string>
    <string name="dish_removed">Dish has been removed</string>
    <string name="warning">Warning</string>
    <string name="do_you_want_to_remove">Do you want to remove this item? You won\'t be able to undo it.</string>
    <string name="do_you_want_to_disable">Do you want to disable this item? You won\'t be able to undo it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="password_too_weak">Your password is too weak. It should contain at least 8 characters, uppercase and lowercase letters and numbers</string>
    <string name="item_removed">Item was removed from the list</string>
    <string name="preview_discount">Preview discount</string>
    <string name="preview_ingredient">Preview ingredient</string>
    <string name="preview_dish">Preview dish</string>
    <string name="preview_worker">Preview worker</string>
    <string name="empty_string" translatable="false" />
    <string name="edit_my_data">Edit my data</string>
    <string name="location_modified">Restaurant location has been modified</string>
    <string name="opening_hours_modified">Opening hours have been modified</string>
    <string name="temp_add_map">Add map</string>
    <string name="allergens">Allergens</string>
    <string name="add_allergen">Add allergen</string>
    <string name="edit_allergen">Edit allergen</string>
    <string name="preview_allergen">Preview allergen</string>
    <string name="allergen_added">Allergen has been added</string>
    <string name="allergen_modified">Allergen has been modified</string>
    <string name="allergen_removed">Allergen has been removed</string>
    <string name="description">Description</string>
    <string name="active">Active</string>
    <string name="base_price">Base price</string>
    <string name="discount_price">Discount price</string>
    <string name="discount">Discount</string>
    <string name="dish">Dish</string>
    <string name="warm_dish">Warm dish</string>
    <string name="cold_dish">Cold dish</string>
    <string name="non_alcoholic_drink">Non-alcoholic drink</string>
    <string name="alcoholic_drink">Alcoholic drink</string>
    <string name="edit">Edit</string>
    <string name="base_ingredients">Base ingredients</string>
    <string name="other_ingredients">Other ingredients</string>
    <string name="possible_ingredients">Possible ingredients</string>
    <string name="ingredient_already_added">Ingredient is already added</string>
    <string name="select_ingredient">Select ingredient</string>
    <string name="search">Search…</string>
    <string name="options">Options</string>
    <string name="remove">Remove</string>
    <string name="set_as_possible_ingredient">Set as possible ingredient</string>
    <string name="set_as_other_ingredient">Set as other ingredient</string>
    <string name="set_as_base_ingredient">Set as base ingredient</string>
    <string name="change_amount">Change amount</string>
    <string name="set_amount">Set amount</string>
    <string name="enter">Enter</string>
    <string name="allergen_already_added">Allergen has been already added</string>
    <string name="treat_sub_dish_temp">Treat this ingredient as a sub-dish? (consisting of many ingredients)</string>
    <string name="add_sub_ingredient">Add sub-ingredient</string>
    <string name="add_order">Add order</string>
    <string name="edit_order">Edit order</string>
    <string name="preview_order">Preview order</string>
    <string name="order_added">Order has been added</string>
    <string name="order_modified">Order has been modified</string>
    <string name="order_removed">Order has been removed</string>
    <string name="in_restaurant">In restaurant</string>
    <string name="phone_call">Phone call</string>
    <string name="client_app">Client app</string>
    <string name="new_s">New</string>
    <string name="accepted">Accepted</string>
    <string name="preparing">Preparing</string>
    <string name="awaiting">Awaiting</string>
    <string name="finished">Finished</string>
    <string name="self_pickup">Self-pickup</string>
    <string name="relative_discount_ending" translatable="false">%</string>
    <string name="absolute_discount_ending" translatable="false">zł</string>
    <string name="collection_time">Collection time</string>
    <string name="choose_dish">Choose dish</string>
    <string name="customize_dish">Customize dish</string>
    <string name="add">Add</string>
    <string name="portions">Portions</string>
    <string name="one" translatable="false">1</string>
    <string name="change_extra_price">Change extra price</string>
    <string name="edit_about_restaurant">Edit details</string>
    <string name="edit_opening_hours">Edit opening hours</string>
    <string name="edit_location">Edit location</string>
    <string name="edit_delivery">Edit delivery</string>
    <string name="new_order">New order</string>
    <string name="my_account_and_preferences"><![CDATA[My account & preferences]]></string>
    <string name="chats">Chats</string>
    <string name="chat">Chat</string>
    <string name="choose_chat">Choose chat</string>
    <string name="worker_forum">Worker forum</string>
    <string name="customers">Customers</string>
    <string name="my_orders">My orders</string>
</resources>