<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/groupHome">
        <item
            android:id="@+id/MainActivity"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/groupRestaurantData">
        <item
            android:id="@+id/RDMainFragment"
            android:icon="@drawable/restaurant_data"
            android:title="@string/restaurant_data" />

        <item
            android:id="@+id/EditAboutRestaurantFragment"
            android:icon="@drawable/about_restaurant"
            android:title="@string/edit_about_restaurant" />

        <item
            android:id="@+id/EditOpeningHoursFragment"
            android:icon="@drawable/hours"
            android:title="@string/edit_opening_hours" />

        <item
            android:id="@+id/EditLocationFragment"
            android:icon="@drawable/location"
            android:title="@string/edit_location" />

        <item
            android:id="@+id/EditDeliveryFragment"
            android:icon="@drawable/delivery"
            android:title="@string/edit_delivery" />
    </group>

    <group
        android:id="@+id/groupMain"
        android:checkableBehavior="single">
        <item
            android:id="@+id/OrdersActivity"
            android:icon="@drawable/order"
            android:title="@string/orders" />

        <item
            android:id="@+id/DishesActivity"
            android:icon="@drawable/dish"
            android:title="@string/dishes" />

        <item
            android:id="@+id/IngredientsActivity"
            android:icon="@drawable/ingredient"
            android:title="@string/ingredients" />

        <item
            android:id="@+id/AllergensActivity"
            android:icon="@drawable/allergen"
            android:title="@string/allergens" />

        <item
            android:id="@+id/ChatsActivity"
            android:icon="@drawable/chat"
            android:title="@string/chats" />

        <item
            android:id="@+id/WorkersActivity"
            android:icon="@drawable/worker"
            android:title="@string/workers" />

        <item
            android:id="@+id/CustomersActivity"
            android:icon="@drawable/customer"
            android:title="@string/customers" />

        <item
            android:id="@+id/DiscountsActivity"
            android:icon="@drawable/discount"
            android:title="@string/discounts" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/groupSettings">
        <item
            android:id="@+id/SettingsActivity"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/LogOut"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />
    </group>
</menu>