<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/groupHome">
        <item
            android:id="@+id/MainActivity"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_home" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/groupIngredients">
        <item
            android:id="@+id/IngredientsMainFragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/ingredients" />

        <item
            android:id="@+id/AddIngredientFragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/add_ingredient" />
    </group>

    <group
        android:id="@+id/groupMain"
        android:checkableBehavior="single">
        <item
            android:id="@+id/DiscountsActivity"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/discounts" />

        <item
            android:id="@+id/DishesActivity"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/dishes" />

        <item
            android:id="@+id/AllergensActivity"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/allergens" />

        <item
            android:id="@+id/OrdersActivity"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/orders" />

        <item
            android:id="@+id/RestaurantDataActivity"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/restaurant_data" />

        <item
            android:id="@+id/WorkersActivity"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/workers" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/groupSettings">
        <item
            android:id="@+id/SettingsActivity"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/LogOut"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/log_out" />
    </group>
</menu>