<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_client_discounts"
    app:startDestination="@id/ClientDiscountsMainFragment">

    <fragment
        android:id="@+id/ClientDiscountsMainFragment"
        android:name="pi.restaurantapp.ui.fragments.client.discounts.ClientDiscountsMainFragment"
        android:label="@string/discounts"
        tools:layout="@layout/fragment_item_list">

    </fragment>

    <activity
        android:id="@+id/ClientMainActivity"
        android:name="pi.restaurantapp.ui.activities.client.ClientMainActivity"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_client_main" />

    <activity
        android:id="@+id/ClientOrdersActivity"
        android:name="pi.restaurantapp.ui.activities.client.ClientOrdersActivity"
        android:label="@string/my_orders"
        tools:layout="@layout/activity_client_orders" />

    <activity
        android:id="@+id/ClientNewOrderActivity"
        android:name="pi.restaurantapp.ui.activities.client.ClientNewOrderActivity"
        android:label="@string/new_order"
        tools:layout="@layout/activity_client_new_order" />

    <activity
        android:id="@+id/ClientChatsActivity"
        android:name="pi.restaurantapp.ui.activities.client.ClientChatsActivity"
        android:label="@string/chat"
        tools:layout="@layout/activity_client_chats" />

    <activity
        android:id="@+id/ClientRestaurantDataActivity"
        android:name="pi.restaurantapp.ui.activities.client.ClientRestaurantDataActivity"
        android:label="@string/restaurant_data"
        tools:layout="@layout/activity_client_restaurant_data" />

    <activity
        android:id="@+id/ClientSettingsActivity"
        android:name="pi.restaurantapp.ui.activities.client.ClientSettingsActivity"
        android:label="@string/my_account_and_preferences"
        tools:layout="@layout/activity_client_settings" />

    <activity
        android:id="@+id/LogOut"
        android:name="pi.restaurantapp.ui.activities.AuthenticationActivity"
        android:label="@string/log_out"
        tools:layout="@layout/activity_authentication">

        <argument
            android:name="logOut"
            android:defaultValue="true"
            app:argType="boolean" />
    </activity>

</navigation>