<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/groupGome">
        <item
            android:id="@+id/MainActivity"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_home" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/groupWorkers">
        <item
            android:id="@+id/WorkersMainFragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/workers" />
    </group>

    <group
        android:id="@+id/groupMain"
        android:checkableBehavior="single">
        <item
            android:id="@+id/RestaurantDataActivity"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/restaurant_data" />

        <item
            android:id="@+id/SettingsActivity"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/LogOut"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/log_out" />
    </group>
</menu>