<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_restaurant_data"
    app:startDestination="@id/RDMainFragment">

    <fragment
        android:id="@+id/RDMainFragment"
        android:name="pi.restaurant.management.ui.fragments.restaurantdata.RDMainFragment"
        android:label="@string/restaurant_data"
        tools:layout="@layout/fragment_rd_main">

        <action
            android:id="@+id/actionRDtoAboutRestaurant"
            app:destination="@id/AboutRestaurantFragment" />

        <action
            android:id="@+id/actionRDtoOpeningHours"
            app:destination="@id/OpeningHoursFragment" />

        <action
            android:id="@+id/actionRDtoLocation"
            app:destination="@id/LocationFragment" />

        <action
            android:id="@+id/actionRDtoDelivery"
            app:destination="@id/DeliveryFragment" />
    </fragment>

    <fragment
        android:id="@+id/AboutRestaurantFragment"
        android:name="pi.restaurant.management.ui.fragments.restaurantdata.AboutRestaurantFragment"
        android:label="@string/about_restaurant"
        tools:layout="@layout/fragment_about_restaurant">
        <action
            android:id="@+id/actionAboutRestaurantToRD"
            app:destination="@id/RDMainFragment"
            app:popUpTo="@id/RDMainFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/OpeningHoursFragment"
        android:name="pi.restaurant.management.ui.fragments.restaurantdata.OpeningHoursFragment"
        android:label="@string/opening_hours"
        tools:layout="@layout/fragment_opening_hours">
        <action
            android:id="@+id/actionOpeningHoursToRD"
            app:destination="@id/RDMainFragment"
            app:popUpTo="@id/RDMainFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/LocationFragment"
        android:name="pi.restaurant.management.ui.fragments.restaurantdata.LocationFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_location">
        <action
            android:id="@+id/actionLocationToRD"
            app:destination="@id/RDMainFragment"
            app:popUpTo="@id/RDMainFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/DeliveryFragment"
        android:name="pi.restaurant.management.ui.fragments.restaurantdata.DeliveryFragment"
        android:label="@string/delivery"
        tools:layout="@layout/fragment_delivery">
        <action
            android:id="@+id/actionDeliveryToRD"
            app:destination="@id/RDMainFragment"
            app:popUpTo="@id/RDMainFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <activity
        android:id="@+id/MainActivity"
        android:name="pi.restaurant.management.ui.activities.MainActivity"
        android:label="Home"
        tools:layout="@layout/activity_main" />

    <activity
        android:id="@+id/DiscountsActivity"
        android:name="pi.restaurant.management.ui.activities.DiscountsActivity"
        android:label="@string/discounts"
        tools:layout="@layout/activity_discounts" />

    <activity
        android:id="@+id/IngredientsActivity"
        android:name="pi.restaurant.management.ui.activities.IngredientsActivity"
        android:label="@string/ingredients"
        tools:layout="@layout/activity_ingredients" />

    <activity
        android:id="@+id/DishesActivity"
        android:name="pi.restaurant.management.ui.activities.DishesActivity"
        android:label="@string/dishes"
        tools:layout="@layout/activity_dishes" />

    <activity
        android:id="@+id/AllergensActivity"
        android:name="pi.restaurant.management.ui.activities.AllergensActivity"
        android:label="@string/allergens"
        tools:layout="@layout/activity_allergens" />

    <activity
        android:id="@+id/OrdersActivity"
        android:name="pi.restaurant.management.ui.activities.OrdersActivity"
        android:label="@string/orders"
        tools:layout="@layout/activity_orders" />

    <activity
        android:id="@+id/WorkersActivity"
        android:name="pi.restaurant.management.ui.activities.WorkersActivity"
        android:label="@string/workers"
        tools:layout="@layout/activity_workers" />

    <activity
        android:id="@+id/SettingsActivity"
        android:name="pi.restaurant.management.ui.activities.SettingsActivity"
        android:label="@string/action_settings"
        tools:layout="@layout/activity_settings" />

    <activity
        android:id="@+id/LogOut"
        android:name="pi.restaurant.management.ui.activities.AuthenticationActivity"
        android:label="@string/log_out"
        tools:layout="@layout/activity_authentication">

        <argument
            android:name="logOut"
            android:defaultValue="true"
            app:argType="boolean" />
    </activity>

</navigation>